# Kyamy-Tech

./: .gitignore  README.md  Z_Generation_Library_BackUp.sql  docker-compose.yml  memo.txt
db/: .env.sample
docs/: C_book.sql  C_history.sql  C_user.sql  External_Design_Ver1.1.md  External_Design_Ver2.0.md  Internal_Design_Ver1.2.md  Internal_Design_Ver2.0.md  RFP.md  Requirement_Definition_Ver.1.1.md  Requirement_Definition_Ver.2.0.md  Requirements_Definition_Ver2.0.md
sql/: C_book.sql  C_user.sql  (+1 more)
src/: .env.sample  Dockerfile  detail.html  pyproject.toml
src/admin/: __init__.py  config.py
src/admin/templates/: admin.html  details.html  layout.html  login.html  signup.html  top.html
src/admin/templates/admin/: admin.html
src/admin/templates/carts/: index.html
src/admin/templates/details/: details.html
src/admin/templates/login/: login.html
src/admin/templates/search/: result.html  window.html
src/admin/templates/signup/: signup.html
src/admin/views/: admin.py  carts.py  details.py  login.py  search.py  signup.py
src/app/: app.py  config.py  database.py
src/app/lib/: login_check.py
src/app/models/: __init__.py  book.py  history.py  user.py
src/app/templates/: layout.html
src/app/templates/account/: login.html
src/app/templates/carts/: index.html
src/app/templates/login/: login.html
src/app/templates/search/: result.html  window.html
src/app/views/: account.py  admin.py  carts.py  details.py  login.py  search.py  signup.py  top.py
src/lib/: config.py  db.py
src/lib/models/: book.py  history.py  user.py
(+28 files in other folders)
